# madS0rt

./: LICENSE  README.md  pyproject.toml
docs/: API.md  GPU_DESIGN.md  PERFORMANCE_TUNING.md
examples/: basic_usage.py  complex_objects.py  gpu_acceleration.py  text_processing.py
madsort/: __init__.py  adaptive.py  benchmark.py  bucket.py  cli.py  extractors.py  gpu_backend.py  hash_utils.py  sorter.py
tests/: test_adaptive.py  test_bucket.py  test_complex_objects.py  test_extractors.py  test_gpu_backend.py  test_path_extractor.py  test_sorter.py
