[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "madS0rt"
version = "0.1.0"
description = "High-performance hybrid sorting using prefix-based bucketing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "w4d4f4k", email = "w4d4f4k@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["sorting", "algorithm", "bucket", "hash", "performance"]
requires-python = ">=3.8"
dependencies = [
    "unidecode>=1.3.0",
]

[project.optional-dependencies]
xxhash = ["xxhash>=3.0.0"]
dev = ["pytest>=7.0", "black", "mypy", "ruff"]
benchmark = ["matplotlib", "numpy", "psutil"]

[project.scripts]
mads0rt = "madsort.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["madsort*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
